Pull request #4: AIR-3701 Integration of the VSI NPU execution provider
Squashed commit of the following:

commit 6ac2251209f06d4552410ac33107e9e66d9dfd50
Author: Pavel Macenauer <Pavel.Macenauer@nxp.com>
Date:   Wed Jan 6 13:25:02 2021 +0100

    AIR-3701 Fixed typo in python build with VsiNpu EP

    Signed-off-by: Pavel Macenauer <Pavel.Macenauer@nxp.com>

commit 264740af6b72ef0ef86fc0f8322601ff44fc34f4
Author: Pavel Macenauer <Pavel.Macenauer@nxp.com>
Date:   Wed Jan 6 12:39:23 2021 +0100

    AIR-3701 Fix yocto build (flake8, missing deps)

    Signed-off-by: Pavel Macenauer <Pavel.Macenauer@nxp.com>

commit 44b538843adcb05b19ecd4240f27907d317497ae
Author: Pavel Macenauer <pavel.macenauer@nxp.com>
Date:   Wed Jan 6 10:11:15 2021 +0100

    AIR-3701 Added a few missing VsiNpu integration uses

    Signed-off-by: Pavel Macenauer <pavel.macenauer@nxp.com>

commit 0a7cdcb947f009b4b9fdc6e768272595c0474b8e
Author: Pavel Macenauer <Pavel.Macenauer@nxp.com>
Date:   Mon Jan 4 17:44:05 2021 +0100

    AIR-3701 Added missing VsiNpu structures/defines/constructors etc.

    Signed-off-by: Pavel Macenauer <Pavel.Macenauer@nxp.com>

commit 89d6495c7f793c83e5dfcedfe57c17bb11e6662a
Author: Pavel Macenauer <pavel.macenauer@nxp.com>
Date:   Mon Jan 4 14:58:39 2021 +0100

    AIR-3701 Fix missed ACL EP condition

    Signed-off-by: Pavel Macenauer <pavel.macenauer@nxp.com>

commit 5fa032ef899fb1fee51841300de96768a3d0ce96
Merge: ccfa0b6a8 5162a5480
Author: Pavel Macenauer <pavel.macenauer@nxp.com>
Date:   Mon Jan 4 10:58:20 2021 +0100

    Merge branch '1.5.3' of ssh://bitbucket.sw.nxp.com/aitec/onnxruntime into 1.5.3_vsi_npu

    Signed-off-by: Pavel Macenauer <pavel.macenauer@nxp.com>

    # Conflicts:
    #	onnxruntime/core/providers/armnn/activation/activations.cc
    #	onnxruntime/core/providers/armnn/activation/activations.h
    #	onnxruntime/core/providers/armnn/math/gemm.h
    #	onnxruntime/core/providers/armnn/nhwc/batch_norm.cc
    #	onnxruntime/core/providers/armnn/nhwc

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -103,6 +103,7 @@ option(onnxruntime_USE_ACL_1908 "Build with ACL version 1908 support" OFF)
 option(onnxruntime_USE_ACL_2002 "Build with ACL version 2002 support" OFF)
 option(onnxruntime_USE_ACL_2008 "Build with ACL version 2008 support" OFF)
 option(onnxruntime_USE_ARMNN "Build with ArmNN support" OFF)
+option(onnxruntime_USE_VSI_NPU "Build with VsiNpu support" OFF)
 option(onnxruntime_ARMNN_RELU_USE_CPU "Use the CPU implementation for the Relu operator for the ArmNN EP" ON)
 option(onnxruntime_ARMNN_BN_USE_CPU "Use the CPU implementation for the Batch Normalization operator for the ArmNN EP" ON)
 option(onnxruntime_ENABLE_INSTRUMENT "Enable Instrument with Event Tracing for Windows (ETW)" OFF)
@@ -720,6 +721,21 @@ if (onnxruntime_USE_ARMNN)
   endif()
 
   list(APPEND onnxruntime_EXTERNAL_LIBRARIES armnn pthread arm_compute_core arm_compute arm_compute_graph)
+endif()
+
+# VsiNpu
+if(onnxruntime_USE_VSI_NPU)
+  add_definitions(-DUSE_VSI_NPU=1)
+
+  if (NOT ${onnxruntime_VSI_NPU_LIBS} STREQUAL "")
+    find_library(NNRT_LIBRARY NAMES nnrt
+                     PATHS ${onnxruntime_VSI_NPU_LIBS}
+                     NO_DEFAULT_PATH NO_CMAKE_FIND_ROOT_PATH)
+
+    link_libraries(nnrt)
+  endif()
+
+  list(APPEND onnxruntime_EXTERNAL_LIBRARIES nnrt)
 endif()
 
 # MKLML
